--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A collection of native JavaScript utils such as functions and constants.",
   "main": "index.js",
   "scripts": {
-    "test": "node tests/index.js"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/LuisGilGB/js-utils/issues"
   },
-  "homepage": "https://github.com/LuisGilGB/js-utils#readme"
+  "homepage": "https://github.com/LuisGilGB/js-utils#readme",
+  "devDependencies": {
+    "mocha": "^6.2.0"
+  }
 }
