--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/LuisGilGB/js-utils#readme",
   "devDependencies": {
+    "chai": "^4.2.0",
     "mocha": "^6.2.0",
     "nodemon": "^1.19.2"
   }
