Added files whitelist for npm

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "build": "webpack --mode production",
     "publish-pro": "npm run build && npm publish --access public"
   },
+  "files": [
+    "/dist"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/LuisGilGB/js-utils.git"
